--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -21,5 +21,9 @@
     "POS_SYMBOL": "les symboles peuvent maintenant changer de position",
     "SHARE": "Partage ton score",
     "SHARE_DESCRIPTION": "J'ai atteint le niveau {{level}} à Doomscroll avec {{points}} points. Peux tu battre mon score ?"
+  },
+  "MUSIC": {
+    "ON": "Son activé",
+    "OFF": "Son désactivé"
   }
 }
