--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
     "NEW_SYMBOL": "new symbol",
     "POS_SYMBOL": "symbols can now change position",
     "SHARE": "Share your score",
-    "SHARE_DESCRIPTION": "I reached level {{level}} in Doomscroll with {{points}} points. Can you beat my score ?"
+    "SHARE_DESCRIPTION": "I reached level {{level}} in Doomscroll with {{points}} points."
   },
   "MUSIC": "Music",
   "SOUND": "Sound",
